Fixes
-Fix: Icon indeterminate not showing in Safari
- Fix: Replace state on buurt lnks only
- Fix: Remove unstable effects
- Fix: search bar positioning
- Fix: Safari links displayed with underline

--- a/src/client/components/MyArea/MyArea.module.scss
+++ b/src/client/components/MyArea/MyArea.module.scss
@@ -100,11 +100,11 @@
   align-items: center;
 
   @include mq-tablet() {
-    width: 50rem;
+    width: 40rem;
   }
 
   @include mq-phone() {
-    margin-top: 14rem;
+    top: 7rem;
     padding-top: 1rem;
     padding-bottom: 1rem;
     display: flex;
