--- a/src/client/components/Search/Search.module.scss
+++ b/src/client/components/Search/Search.module.scss
@@ -74,6 +74,7 @@
 .ResultSetLink {
   font-weight: normal;
   display: block;
+  text-decoration: none;
 
   &:hover {
     text-decoration: underline;
